turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:11: error: not found: value R
	if (rule(x) == R) droite() else gauche();
                       ^